# cloud

./: .env  .gitignore  LICENSE  Makefile  pyproject.toml  terraform.tf
.github/workflows/: deploy.yml
src/common/aws/: aws.py
src/common/logger/: create_logger.py  logging_function.py
src/handlers/: error_notifier.py
src/handlers/check_posts/: check_posts.py
src/handlers/error_notifier/: error_notifier.py
src/layers/common/python/common/aws/: __init__.py  aws.py
src/layers/common/python/common/http/: __init__.py  http.py
src/layers/common/python/common/load_environments/: __init__.py  load_environments.py
src/layers/common/python/common/logger/: __init__.py  logging_handler.py
terraform_modules/common/: apigw.tf  iam.tf  lambda.tf  s3.tf  sns.tf  ssm.tf  terraform_config.tf
terraform_modules/lambda_function/: lambda.tf  terraform_config.tf
terraform_modules/lambda_function_basic/: lambda.tf  terraform_config.tf
