[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pyright = "^1.1.339"
# arn:aws:lambda:ap-northeast-1:017000801446:layer:AWSLambdaPowertoolsPythonV2-Arm64:51
aws-lambda-powertools = {version = "2.28.1", extras = ["tracer"]}
botocore = "1.30.1"
boto3 = "1.27.1"
boto3-stubs-lite = {version = "1.27.1", extras = ["s3", "ssm"]}

[too.pyright]
include = ["src"]
defineConstant = { DEBUG = true }

typeCheckingMode = "strict"
useLibraryCodeForTypes = false

reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
